section-layout-container, t1fc0s08, plmw1e5, margin__auto-x -> container-fluid

--- a/insights.html
+++ b/insights.html
@@ -177,7 +177,7 @@
                       <div style="--gp-section-max-width: 1120px">
                         <div class="section-container">
                           <div
-                            class="margin__auto-x max__width dir dir-ltr"
+                            class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -209,7 +209,7 @@
                       <div style="--gp-section-max-width: 1120px">
                         <div class="section-container">
                           <div
-                            class="margin__auto-x max__width dir dir-ltr"
+                            class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -1369,7 +1369,7 @@
                       <div style="--gp-section-max-width: 1120px">
                         <div class="section-container">
                           <div
-                            class="margin__auto-x max__width dir dir-ltr"
+                            class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -1449,7 +1449,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="margin__auto-x max__width dir dir-ltr"
+                              class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div>
@@ -1570,7 +1570,7 @@
                       <div style="--gp-section-max-width: 1120px">
                         <div class="section-container">
                           <div
-                            class="margin__auto-x max__width dir dir-ltr"
+                            class="wrapper-full max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
