--- a/merchandising.html
+++ b/merchandising.html
@@ -12616,7 +12616,7 @@
                                     <div class="section-container">
                                       <div
                                         style="--maxWidth: 1120px"
-                                        class="margin__auto-x max__width dir dir-ltr"
+                                        class="wrapper-full max__width dir dir-ltr"
                                       >
                                         <div class="display__flex dir dir-ltr">
                                           <footer
