--- a/products.html
+++ b/products.html
@@ -1439,7 +1439,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -1548,7 +1548,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -1764,7 +1764,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -1893,7 +1893,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -1962,7 +1962,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -2139,7 +2139,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -2624,7 +2624,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -2835,7 +2835,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -3014,7 +3014,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -5563,7 +5563,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -6301,7 +6301,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -6740,7 +6740,7 @@
                                       >
                                         <div class="section-container">
                                           <div
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                             style="--maxWidth: 1120px"
                                           >
                                             <div
@@ -7006,7 +7006,7 @@
                                             <div class="products-container__mb-footer-overlay">
                                               <div class="section-container">
                                                 <div
-                                                  class="margin__auto-x max__width dir dir-ltr"
+                                                  class="wrapper-full max__width dir dir-ltr"
                                                   style="--maxWidth: 1120px"
                                                 >
                                                   <div class="products-container__mb-footer-overlay-wrapper">
@@ -8616,7 +8616,7 @@
                                         <div class="section-container">
                                           <div
                                             style="--maxWidth: 1120px"
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                           >
                                             <div
                                               data-plugin-in-point-id="TITLE_DEFAULT"
@@ -8807,7 +8807,7 @@
                                         <div class="section-container">
                                           <div
                                             style="--maxWidth: 1120px"
-                                            class="margin__auto-x max__width dir dir-ltr"
+                                            class="wrapper-full max__width dir dir-ltr"
                                           >
                                             <div
                                               data-plugin-in-point-id="HERO_DEFAULT"
@@ -9199,7 +9199,7 @@
                                   <div class="_1zeg3u">
                                     <div class="section-container">
                                       <div
-                                        class="margin__auto-x max__width dir dir-ltr"
+                                        class="wrapper-full max__width dir dir-ltr"
                                         style="--maxWidth: 1120px"
                                       >
                                         <div
@@ -18340,7 +18340,7 @@
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
                                         <div
-                                          class="margin__auto-x max__width dir dir-ltr"
+                                          class="wrapper-full max__width dir dir-ltr"
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
@@ -19661,7 +19661,7 @@
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
                                         <div
-                                          class="margin__auto-x max__width dir dir-ltr"
+                                          class="wrapper-full max__width dir dir-ltr"
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
@@ -19803,7 +19803,7 @@
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
                                         <div
-                                          class="margin__auto-x max__width dir dir-ltr"
+                                          class="wrapper-full max__width dir dir-ltr"
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
@@ -20242,7 +20242,7 @@
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
                                         <div
-                                          class="margin__auto-x max__width dir dir-ltr"
+                                          class="wrapper-full max__width dir dir-ltr"
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
