--- a/contact-host.html
+++ b/contact-host.html
@@ -277,7 +277,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="margin__auto-x max__width dir dir-ltr"
+                                                class="wrapper-full max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -416,7 +416,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="margin__auto-x max__width dir dir-ltr"
+                                                class="wrapper-full max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -463,7 +463,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="margin__auto-x max__width dir dir-ltr"
+                                                class="wrapper-full max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -515,7 +515,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="margin__auto-x max__width dir dir-ltr"
+                                                class="wrapper-full max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -561,7 +561,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="margin__auto-x max__width dir dir-ltr"
+                                                class="wrapper-full max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -1684,7 +1684,7 @@
                                           <div class="section-container">
                                             <div
                                               style="--maxWidth: 1120px"
-                                              class="margin__auto-x max__width dir dir-ltr"
+                                              class="wrapper-full max__width dir dir-ltr"
                                             >
                                               <div
                                                 data-plugin-in-point-id="NAV_MOBILE"
