--- a/experiences.html
+++ b/experiences.html
@@ -186,7 +186,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="margin__auto-x max__width dir dir-ltr"
+                              class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -249,7 +249,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="margin__auto-x max__width dir dir-ltr"
+                              class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -405,7 +405,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="margin__auto-x max__width dir dir-ltr"
+                              class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -513,7 +513,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="margin__auto-x max__width dir dir-ltr"
+                              class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -617,7 +617,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="margin__auto-x max__width dir dir-ltr"
+                              class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -721,7 +721,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="margin__auto-x max__width dir dir-ltr"
+                              class="wrapper-full max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
