--- a/payment.html
+++ b/payment.html
@@ -99,7 +99,7 @@
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
                                         <div
-                                          class="margin__auto-x max__width dir dir-ltr"
+                                          class="wrapper-full max__width dir dir-ltr"
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
