--- a/trips.html
+++ b/trips.html
@@ -185,7 +185,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="margin__auto-x max__width dir dir-ltr"
+                                class="wrapper-full max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -222,7 +222,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="margin__auto-x max__width dir dir-ltr"
+                                class="wrapper-full max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -379,7 +379,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="margin__auto-x max__width dir dir-ltr"
+                                class="wrapper-full max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -415,7 +415,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="margin__auto-x max__width dir dir-ltr"
+                                class="wrapper-full max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -681,7 +681,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="margin__auto-x max__width dir dir-ltr"
+                                class="wrapper-full max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
