display__flex -> flex-before-after

--- a/edit/photos.html
+++ b/edit/photos.html
@@ -357,7 +357,7 @@
                         data-testid="myx-container"
                       >
                         <div class="_2m9wl" style="max-width: 626px">
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="HEADING_WIDE"
@@ -383,7 +383,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="STEP_SUBTITLE"
@@ -408,7 +408,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="COVER_HEADING"
@@ -433,7 +433,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="COVER_SUBTITLE"
@@ -457,7 +457,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="COVER_PHOTO"
@@ -599,7 +599,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="GALLERY_HEADING"
@@ -624,7 +624,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="GALLERY_SUBTITLE"
@@ -651,7 +651,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="GALLERY_PHOTOS"
@@ -1747,7 +1747,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="PHOTOS_PREVIEW"
@@ -2207,7 +2207,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="display__flex dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="PHOTO_REQUIREMENTS"
