--- a/experiences.html
+++ b/experiences.html
@@ -174,7 +174,7 @@
               <div class="site-content__body">
                 <div style="margin-top: 16px; margin-bottom: 64px">
                   <main id="site-content">
-                    <div class="display__flex dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -237,7 +237,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="display__flex dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -393,7 +393,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="display__flex dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -501,7 +501,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="display__flex dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -605,7 +605,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="display__flex dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -709,7 +709,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="display__flex dir dir-ltr">
+                    <div class="flex-before-after dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
                         <div
                           style="
@@ -817,7 +817,7 @@
                 </div>
               </div>
             </main>
-            <div class="display__flex dir dir-ltr">
+            <div class="flex-before-after dir dir-ltr">
               <footer role="contentinfo" class="footer__content-info">
                 <div class="footer__container">
                   <div class="footer__links-wrapper">
