--- a/wishlist.html
+++ b/wishlist.html
@@ -47,7 +47,7 @@
                 <div style="--page-shell-max-content-width: none">
                   <div class="page-shell">
                     <div class="hidden block-md">
-                      <div class="display__flex dir dir-ltr" style="">
+                      <div class="flex-before-after dir dir-ltr" style="">
                         <header class="header">
                           <div class="_uck3tvq">
                             <div class="header__brand-wrapper">
@@ -1332,7 +1332,7 @@
                                     </div>
                                   </div>
                                   <div itemprop="itemList" itemscope="" itemtype="http://schema.org/ItemList" data-container-name="explore" class="_19qnt1y">
-                                    <div class="display__flex dir dir-ltr" style="">
+                                    <div class="flex-before-after dir dir-ltr" style="">
                                       <div class="new__padding-x" style="background-color: transparent;">
                                         <div>
                                           <div class="_aov0j6">
@@ -5329,7 +5329,7 @@
                                   data-container-name="explore"
                                   class="_19qnt1y"
                                 >
-                                  <div class="display__flex dir dir-ltr" style="">
+                                  <div class="flex-before-after dir dir-ltr" style="">
                                     <div
                                       class="new__padding-x"
                                       style="background-color: transparent"
