--- a/explore-who.html
+++ b/explore-who.html
@@ -38,7 +38,7 @@
                     <div class="_159z8rr">
                       <div class="_fz3zdn"></div>
                       <div class="_1t78k44">
-                        <div class="display__flex dir dir-ltr">
+                        <div class="flex-before-after dir dir-ltr">
                           <div style="--gp-section-max-width: 1120px">
                             <div
                               data-plugin-in-point-id="EXPLORE_COMPACT_SEARCH_INPUT_FLOW"
