--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -435,7 +435,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="display__flex dir dir-ltr"></div>
+                  <div class="flex-before-after dir dir-ltr"></div>
                 </div>
                 <div class="incoming__container dir dir-ltr">
                   <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
@@ -469,7 +469,7 @@
                 <div class="page-shell-max-xl-plus">
                   <div class="page-shell">
                     <div class="hidden block-md">
-                      <div class="display__flex dir dir-ltr" style="">
+                      <div class="flex-before-after dir dir-ltr" style="">
                         <header class="header">
                           <div class="header__container">
                             <div class="header__brand-wrapper">
@@ -911,7 +911,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="display__flex dir dir-ltr">
+                  <div class="flex-before-after dir dir-ltr">
                     <footer role="contentinfo" class="footer">
                       <div class="footer__container">
                         <div class="footer__links-wrapper">
