--- a/specific_trip.html
+++ b/specific_trip.html
@@ -49,7 +49,7 @@
                 <div style="--page-shell-max-content-width: 1600px">
                   <div class="page-shell">
                     <div class="hidden block-md">
-                      <div class="display__flex dir dir-ltr" style="">
+                      <div class="flex-before-after dir dir-ltr" style="">
                         <header class="header">
                           <div class="header__container">
                             <div class="header__brand-wrapper">
@@ -5717,7 +5717,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="display__flex dir dir-ltr">
+                  <div class="flex-before-after dir dir-ltr">
                     <footer role="contentinfo" class="footer">
                       <div class="footer__container">
                         <div class="footer__links-wrapper">
