_ar9stc -> footer__utility-wrapper-xl

--- a/help.html
+++ b/help.html
@@ -5996,7 +5996,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="_ar9stc">
+                        <div class="footer__utility-wrapper-xl">
                           <div class="page-shell-mobile__footer">
                             <div class="page-shell-mobile__footer-wrapper">
                               <div class="footer__copyright-text" dir="ltr">
