--- a/payment.html
+++ b/payment.html
@@ -1648,7 +1648,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_ar9stc">
+                                      <div class="footer__utility-wrapper-xl">
                                         <div class="page-shell-mobile__footer">
                                           <div class="page-shell-mobile__footer-wrapper">
                                             <div
