--- a/products.html
+++ b/products.html
@@ -7642,7 +7642,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_ar9stc">
+                                      <div class="footer__utility-wrapper-xl">
                                         <div class="page-shell-mobile__footer">
                                           <div
                                             class="page-shell-mobile__footer-wrapper"
@@ -21282,7 +21282,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_ar9stc">
+                                    <div class="footer__utility-wrapper-xl">
                                       <div class="page-shell-mobile__footer">
                                         <div
                                           class="page-shell-mobile__footer-wrapper"
